--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "next": "13.4.4",
-    "next-auth": "^4.22.1",
+    "next-auth": "^4.20.1",
     "postcss": "8.4.23",
     "prettier": "^2.8.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
