--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -19,7 +19,7 @@
     "paths": {
       "_types/*": ["src/@types/*"],
       "@api": ["src/api"],
-      "@components": ["src/app/components"],
+      "@components": ["src/components"],
       "@assets": ["src/assets"],
       "@styles": ["src/styles"],
       "@constants": ["src/constants"],
